<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/ghostcolor"
    tools:context="cn.lrn517.techcomplatform.activity.ApplyForSpecialClassifyActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/apply_for_special_classify_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:contentInsetStart="0dp"
            android:background="@color/colorPrimary"
            android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/Base.ThemeOverlay.AppCompat.Light">

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp">



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="申请创作专栏"
                android:textSize="28dp"
                android:textColor="#000"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/applyfor1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="申请人需满足以下要求："
                android:textColor="#000"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/applyfor2"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="申请专栏得内容方向："
                android:textColor="#000"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/applyfor3"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/applyfor4"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="@color/line"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="28dp"
                android:text="专栏名称"
                android:textColor="#000"/>

            <EditText
                android:id="@+id/apply_for_special_classify_tpzname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_background_normal"
                android:hint="请输入专栏名称"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="@color/line"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="28dp"
                android:text="专栏话题"
                android:textColor="#000"/>

            <Spinner
                android:id="@+id/apply_for_special_classify_spinner"
                android:layout_width="150dp"
                android:layout_height="wrap_content">

            </Spinner>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <Button
            android:id="@+id/apply_for_special_classify_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:textColor="@color/white"
            android:background="@drawable/tech_detail_attention_0"
            android:text="申请"/>

    </LinearLayout>
</LinearLayout>
